# Calendar-test

./: .env.example  .fernet_key  .gitignore  Dockerfile  HACKATHON_DEMO_SCRIPT.md  Procfile  README.md  SETUP_GUIDE.md  SUPABASE_OAUTH_SETUP.md  alembic.ini  calendar_agent_bot.py  debug_current_parsing.py  debug_date_parsing.py  debug_detailed_parsing.py  debug_google_datetime.py  debug_startup.py  debug_timezone_storage.py  docker-compose.yml  pyproject.toml  quick_test.py  railway.json  requirements.txt  run_bot.py  simple_test.py  start.sh  start_bot.py  temp_disable_rls.sql  test_calendar_agent.py  test_final_fix.py  test_future_times.py  test_google_calendar.py  test_improved_parsing.py  test_manual_offset.py  test_timezone_fix.py  test_timezone_storage_fix.py  test_user_scenario.py
.github/workflows/: deploy.yml
alembic/: env.py  script.py.mako
alembic/versions/: 20250101_000001_init_users_and_guild_settings.py  20250101_000002_add_reminders.py  4e28fbd68bba_add_event_templates.py  59c458ed2bb7_add_events_table.py
events_agent/: __init__.py  main.py
events_agent/adapters/: gcal.py
events_agent/app/: http.py  oauth.py
events_agent/bot/: discord_bot.py  discord_bot_simple.py
events_agent/chatbot/: __init__.py  bot.py  config.py  registry.py  tool.py
events_agent/domain/: models.py
events_agent/infra/: crypto.py  date_parsing.py  db.py  event_repository.py  logging.py  metrics.py  rate_limit.py  repo.py  scheduler.py  settings.py  supabase_db.py  timezone_utils.py
events_agent/services/: calendar_service.py  calendar_service_simple.py  (+1 more)
(+7 files in other folders)
